--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "devDependencies": {
-    "esbuild": "0.21.4"
-  },
   "scripts": {
-    "start": "esbuild v2/src/main.js --outdir=v2/dist --jsx=automatic --format=esm --bundle --sourcemap --watch --servedir=v2 --define:DEV=true",
-    "build": "esbuild v2/src/main.js --outdir=v2/dist --jsx=automatic --format=esm --bundle --sourcemap --minify --define:DEV=false"
-    
+    "start": "esbuild v2/src/main.jsx --outdir=v2/dist --jsx=automatic --format=esm --bundle --sourcemap --watch --servedir=v2 --define:DEV=true",
+    "build": "esbuild v2/src/main.jsx --outdir=v2/dist --jsx=automatic --format=esm --bundle --sourcemap --minify --define:DEV=false"
+  },
+  "dependencies": {
+    "esbuild": "^0.21.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
