--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "build": "esbuild v2/src/main.jsx --outdir=v2/dist --jsx=automatic --format=esm --bundle --sourcemap --minify --define:DEV=false"
   },
   "dependencies": {
+    "dexie": "^4.0.7",
+    "dexie-react-hooks": "^1.1.7",
     "esbuild": "^0.21.4",
+    "lastfm-ts-api": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
